# geode-icon-kit-utilities

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
include/: constants.hpp
include/hooks/: CCLayerColor.hpp  CharacterColorPage.hpp  FLAlertLayer.hpp  GJGarageLayer.hpp  ItemInfoPopup.hpp
include/popups/: PlayerOptionsPopup.hpp
include/utils/: CCMenuItemTogglerSpoof.hpp  LinkedCCMenu.hpp
src/: constants.cpp  debug.cpp  main.cpp
src/hooks/: CCLayerColor.cpp  CharacterColorPage.cpp  FLAlertLayer.cpp  GJGarageLayer.cpp  ItemInfoPopup.cpp
src/popups/: PlayerOptionsPopup.cpp
src/utils/: LinkedCCMenu.cpp
